[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/DeathScreen.gd" type="Script" id=1]
[ext_resource path="res://UI/big234.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer"]
layer = 100

[node name="DeathScreen" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BlackOverlay" type="ColorRect" parent="DeathScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.364706 )

[node name="VBoxContainer" type="VBoxContainer" parent="DeathScreen/BlackOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.5
margin_top = -90.0
margin_right = 109.5
margin_bottom = 90.0
alignment = 1

[node name="Label" type="Label" parent="DeathScreen/BlackOverlay/VBoxContainer"]
margin_top = 45.0
margin_right = 219.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 4 )
text = "YOU DIED"

[node name="Restart" type="Button" parent="DeathScreen/BlackOverlay/VBoxContainer"]
margin_top = 91.0
margin_right = 219.0
margin_bottom = 111.0
custom_fonts/font = SubResource( 1 )
text = "RESTART"

[node name="BackToMenu" type="Button" parent="DeathScreen/BlackOverlay/VBoxContainer"]
margin_top = 115.0
margin_right = 219.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 3 )
text = "BACK TO MAIN MENU"

[connection signal="pressed" from="DeathScreen/BlackOverlay/VBoxContainer/Restart" to="DeathScreen" method="_on_Restart_pressed"]
[connection signal="pressed" from="DeathScreen/BlackOverlay/VBoxContainer/BackToMenu" to="DeathScreen" method="_on_BackToMenu_pressed"]
